[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Brain Games. 5 games for your brains: Even, Calculator, GCD, Progression, Prime"
repository = "https://github.com/Revanhol/python-project-49"
authors = ["revanhol <jadiknightrevan@gmail.com>"]
readme = "README.md"
packages = [{include = "brain_games"}]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"